--- a/search_users/package.json
+++ b/search_users/package.json
@@ -11,7 +11,9 @@
     "react-avatar": "^5.0.3",
     "react-bootstrap": "^2.5.0",
     "react-bootstrap-sweetalert": "^5.2.0",
+    "react-bs-datatable": "^3.6.1",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.4.0",
     "react-router-dom": "^6.4.1",
     "react-scripts": "5.0.1",
     "sweetalert2": "^11.4.35",
