--- a/search_users/package.json
+++ b/search_users/package.json
@@ -16,6 +16,8 @@
     "react-icons": "^4.4.0",
     "react-router-dom": "^6.4.1",
     "react-scripts": "5.0.1",
+    "rsuite": "^5.19.0",
+    "styled-components": "^5.3.6",
     "sweetalert2": "^11.4.35",
     "web-vitals": "^2.1.4"
   },
